[package]
name = "lau-onboarding"
version = "0.1.0"
edition = "2021"
description = "Agent onboarding system — guides new ensigns through room orientation, automation rewind, and first assignment"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-onboarding"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
